--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html>
   <head>
     <title>test_marionette</title>
-    <link rel="stylesheet" href="/static/style.css" title="" type="text/css">
-    <link rel="stylesheet" href="/static/bootstrap.css" title="" type="text/css">
+    <link rel="stylesheet" href="/static/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="/static/style.css" type="text/css">
   </head>
   <body>
     <div class="container">
-      <h3>Contact petitions (TEST#1)</h3>
+      <h3>TEST#1 (Contact petitions)</h3>
       <hr>
       <div id="contacts"></div>
     </div>
     <hr>
     <div class="container">
-      <h3>Search (TEST#2)</h3>
+      <h3>TEST#2 (Search)</h3>
       <hr>
       <div>
         <div class="row">
